--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     </style>
 </head>
 <body>
-    <button>Button 1</button>
-    <button>Button 2</button>
-    <button>Button 3</button>
+    <button onclick="window.location.href='lab1/index.html';">Лабараторна 1</button>
 </body>
+
 </html>
