--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </style>
 </head>
 <body>
-    <button onclick="window.location.href='lab1/index.html';">Лабараторна 1</button>
+    <button onclick="window.location.href='lr1/index.html';">Лаб 1</button>
 </body>
 
 </html>
+
