--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 </head>
 <body>
     <button onclick="window.location.href='lr1/index.html';">Лаб 1</button>
+    <button onclick="window.location.href='lr2/index.html';">Лаб 2</button>
+    <button onclick="window.location.href='lr3/index.html';">Лаб 3</button>
+    <button onclick="window.location.href='lr4/index.html';">Лаб 4</button>
+    <button onclick="window.location.href='pr1/index.html';">Пр 1</button>
 </body>
 
 </html>
+
 
